--- a/style.css
+++ b/style.css
@@ -46,7 +46,12 @@ body{
 }
 .greetings > span:nth-child(7){
     animation-delay: .12s;
-
+}
+.greetings > span:nth-child(8){
+    animation-delay: .14s;
+}
+.greetings > span:nth-child(9){
+    animation-delay: .16s;
 .description{
     font-size: 1.5rem;
     margin-bottom: 20px;
